# trywasm

./: Cargo.toml  LICENSE-MIT  README.md
docs/: index.html  trunk-template-9fa949999c7f3674.js  trunk-template-9fa949999c7f3674_bg.wasm
src/: app.rs
